[gd_scene load_steps=5 format=3 uid="uid://c3i78q0n5b8ey"]

[ext_resource type="Script" uid="uid://persbkadr4ri" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://f6em6ogpjgbh" path="res://assets/screenshots/screenshot_menu.png" id="2_con2f"]
[ext_resource type="LabelSettings" uid="uid://bsbc3huf2wi66" path="res://resources/labels/primary.tres" id="2_vjb58"]
[ext_resource type="LabelSettings" uid="uid://bnw88fmtnq43v" path="res://resources/labels/secondary.tres" id="3_con2f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vjb58")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(351, 266)
texture = ExtResource("2_con2f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -163.0
offset_right = 170.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU
---------"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="WinsNeededItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/WinsNeededItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/WinsNeededItem"]
layout_mode = 2
text = "WINS NEEDED  :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/WinsNeededItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/WinsNeededItem/MarginContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayersItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/PlayersItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/PlayersItem"]
layout_mode = 2
text = "PLAYERS      :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/PlayersItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/PlayersItem/MarginContainer"]
layout_mode = 2
text = "2"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShopItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShopItem"]
layout_mode = 2
text = "SHOP         :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/ShopItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShopItem/MarginContainer"]
layout_mode = 2
text = "ON"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShrinkingItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShrinkingItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShrinkingItem"]
layout_mode = 2
text = "SHRINKING    :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/ShrinkingItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/ShrinkingItem/MarginContainer"]
layout_mode = 2
text = "ON"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FastIgnitionItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/FastIgnitionItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/FastIgnitionItem"]
layout_mode = 2
text = "FASTIGNITION :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/FastIgnitionItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/FastIgnitionItem/MarginContainer"]
layout_mode = 2
text = "ON"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartMoneyItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/StartMoneyItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/StartMoneyItem"]
layout_mode = 2
text = "STARTMONEY   :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/StartMoneyItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/StartMoneyItem/MarginContainer"]
layout_mode = 2
text = "OFF"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NormalLevelItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/NormalLevelItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/NormalLevelItem"]
layout_mode = 2
text = "NORMALLEVEL  :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/NormalLevelItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/NormalLevelItem/MarginContainer"]
layout_mode = 2
text = "YES"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamblingItem" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="PointerLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/GamblingItem"]
layout_mode = 2
text = ">"
label_settings = ExtResource("3_con2f")
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/GamblingItem"]
layout_mode = 2
text = "GAMBLING     :"
label_settings = ExtResource("2_vjb58")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MenuContainer/GamblingItem"]
layout_mode = 2
theme_override_constants/margin_left = -15

[node name="ValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MenuContainer/GamblingItem/MarginContainer"]
layout_mode = 2
text = "YES"
label_settings = ExtResource("2_vjb58")
horizontal_alignment = 1
vertical_alignment = 1
